# chat

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI.md  agent.py  agent_factory.py  compose.yaml  config.py  devenv.nix  main.py  memory.py  models.py  pyproject.toml  requirements.txt  storage.py  test_web_scrape.py  workflow.py
api/: __init__.py  chats.py  websockets.py
backend/: .env.example  agent.py  config.py  llm.py  main.py  memory.py  models.py  pyproject.toml  requirements.txt  storage.py  workflow.py
backend/api/: chats.py  websockets.py
backend/prompts/: __init__.py  compaction.py  fact_extraction.py  sentiment_analysis.py  starting.py
backend/tools/: _fetch.py  draw_chart.py  execute_python.py  fundamental_analysis.py  geolocation.py  momentum_analysis.py  scrape_image.py  search_books.py  search_images.py  search_news.py  search_videos.py  sentiment_analysis.py  suggest_continuations.py  volatility_analysis.py  web_scrape.py  web_search.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/lib/: utils.ts
frontend/src/lib/components/: UserSettings.svelte
frontend/src/lib/components/chat/: Attachment.svelte  ChatInput.svelte  ChatMessage.svelte  ContextBar.svelte  Continuations.svelte  CopyButton.svelte  DynamicChart.svelte  Markdown.svelte  RegenerateButton.svelte  SettingsDialog.svelte  Sidebar.svelte  ThinkingProcess.svelte
frontend/src/lib/components/ui/select/: select-value.svelte
frontend/src/lib/components/ui/sonner/: sonner.svelte
frontend/src/lib/stores/: chat.ts  settings.ts  user.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
prompts/: __init__.py  resuming.py  starting.py  summarizer.py  web_summarizer.py
static/: app.js  colors.css  index.html  style.css
tools/: ask_user.py  finance.py  finish.py  finish_task.py  subagent.py  trading.py  web_scrape.py  web_search.py
