[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llama-index-core<0.12",
    "llama-index-llms-openai<0.3",
    "llama-index-llms-openai-like<0.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
]
