[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "ddgs>=9.14.1",
    "docker>=7.1.0",
    "fastapi>=0.136.3",
    "litellm>=1.86.2",
    "mem0ai>=2.0.4",
    "numpydoc>=1.10.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.12.2",
    "python-multipart>=0.0.30",
    "redis>=8.0.0",
    "tabulate>=0.10.0",
    "torch>=2.11.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.48.0",
    "websockets>=16.0",
    "yfinance>=1.3.0",
]
