[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.1",
    "docker>=7.1.0",
    "easyocr>=1.7.2",
    "fastapi>=0.136.3",
    "openrouteservice>=2.3.0",
    "fastembed>=0.7.3",
    "httpx>=0.28.0",
    "litellm>=1.86.2",
    "numpy>=2.2.6",
    "numpydoc>=1.10.0",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pypdf>=6.12.2",
    "python-multipart>=0.0.30",
    "redis>=8.0.0",
    "tabulate>=0.10.0",
    "torch>=2.11.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.48.0",
    "websockets>=16.0",
    "yfinance>=1.3.0",
]
